2009-01-24  Vivien Malerba <malerba@gnome-db.org>

	* libgda/sql-parser/parser_tokens.h: removed unnecessary token names
	* libgda/gda-server-provider-extra.[ch]: code cleanup, improved
	documentation

2009-01-24  Vivien Malerba <malerba@gnome-db.org>

	* providers/skel-implementation/capi/gen_def.c:
	* providers/skel-implementation/capi/Makefile.am:
	* providers/firebird/gen_def.c:
	* providers/firebird/Makefile.am:
	* providers/mysql/gen_def.c:
	* providers/mysql/Makefile.am:
	* providers/postgres/gen_def.c:
	* providers/postgres/Makefile.am: corrected parser's symbols translations
	* libgda/sql-parser/parser.y: allow identifiers to be enclosed between
	single quotes
	* libgda/sql-parser/gda-statement-struct-util.c:
	gda_sql_identifier_remove_quotes() also accepts single quotes around
	identifiers
	* libgda/sql-parser/gda-sql-parser.c: added debug information
	* tests/parser/testdata.xml: added more test cases

	This fixes bug #568844

2009-01-23  Vivien Malerba <malerba@gnome-db.org>

	* sqlite/gda-sqlite-provider.c: partial fix for bug #568844

2009-01-23  Vivien Malerba <malerba@gnome-db.org>

	* documentation fixes, see bugs #568731 and #561178.

2009-01-21  Vivien Malerba <malerba@gnome-db.org>

	* libgda/sqlite/gda-sqlite-meta.c: fix for bug #568570
	* libgda/gda-value.c: corrected gda_value_new_timestamp_from_timet()
	to correclty handle the results of localtime() (thanks to Tim Lapawa)

2009-01-19  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: set version to 3.99.10

Released 3.99.9

2009-01-19  Vivien Malerba <malerba@gnome-db.org>

	* libgda/sqlite/sqlite-src: reverted to 3.6.7 because of bug #568093
	* other files: documentation updates

2009-01-18  Vivien Malerba <malerba@gnome-db.org>

	* libgda/sqlite/gda-sqlite-provider.c: fix for bug #568165
	* libgda-report/RML/gda-report-rml-document.c:
	* providers/skel-implementation/models/gda-models.h:
	* providers/skel-implementation/capi/gda-capi.h: