@@ -1,3 +1,10 @@
+2009-01-25  Vivien Malerba <malerba@gnome-db.org>
+
+	* tools/test_blob.sh: new script used to test database provider's blobs
+	implementations
+	* providers/postgres/gda-postgres-provider.c: correct a double free problem
+	and prevent memory leaks in some cases
+
 2009-01-24  Vivien Malerba <malerba@gnome-db.org>
 
 	* libgda/sql-parser/parser_tokens.h: removed unnecessary token names
